syntax = "proto3";

package directory.model;

option go_package = "../../lib/directory";

message DirectoryRequest {
  string path = 1;
}

message DirectoryResponse {
  repeated FileCollection files = 1;
  repeated DirCollection directories = 2;
}

message FileCollection {
  string name = 1;
  string size = 2;
}

message DirCollection {
  string name = 1;
  string size = 2;
}



